--- a/app/src/main/res/layout/activity_groupchat_redbag.xml
+++ b/app/src/main/res/layout/activity_groupchat_redbag.xml
@@ -34,12 +34,17 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="44dp">
+                android:layout_height="44dp"
+                >
+
                 <View
                     android:layout_alignParentTop="true"
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:background="@color/c_de"/>
+                    android:background="@color/c_de"
+                    />
+
+
                 <TextView
                     android:id="@+id/v_lable_redbag_count"
                     android:layout_width="wrap_content"
