--- a/app/src/main/res/drawable/btn_callvoice_selector.xml
+++ b/app/src/main/res/drawable/btn_callvoice_selector.xml
@@ -2,5 +2,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true" android:drawable="@drawable/hands_free_n"/>
-    <item android:drawable="@drawable/hands_free_s"/>
+    <item android:drawable="@drawable/hands_free_p"/>
 </selector>
