--- a/app/src/main/res/layout/layout_reward_dialog.xml
+++ b/app/src/main/res/layout/layout_reward_dialog.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/c_white"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+
     >
 
     <ImageView
@@ -113,4 +111,4 @@
         android:layout_height="26dp"
         android:layout_below="@+id/btn_reward_action"
         />
-</RelativeLayout>
+</merge>
