--- a/app/src/main/res/layout/layout_rewarded_dialog.xml
+++ b/app/src/main/res/layout/layout_rewarded_dialog.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:background="@color/c_white"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
     <ImageView
@@ -115,4 +112,4 @@
     </LinearLayout>
 
 
-</FrameLayout>
+</merge>
