--- a/app/src/main/res/layout/activity_agora_wild_call.xml
+++ b/app/src/main/res/layout/activity_agora_wild_call.xml
@@ -282,6 +282,18 @@
                 />
         </FrameLayout>
         <!--ads-->
+        <!--秒配-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/v_pay_phone"
+            android:layout_gravity="bottom|center_horizontal"
+            app:layout_marginBottomPercent="10%"
+            android:clickable="true"
+            android:onClick="click"
+            android:text="秒配"
+            />
+        <!--秒配-->
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
